--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-FROZENKASHMIR_DB_NAME="FROZENKASHMIR" # dummy
+FROZENKASHMIR_DB_NAME="FROZENKASHMIR"
 FROZENKASHMIR_DB_USER="postgres",
 FROZENKASHMIR_DB_PASSWORD="Lasiaf@123"
 FROZENKASHMIR_DB_HOST="localhost"
