--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-FROZENKASHMIR_DB_NAME="FROZENKASHMIR"
-FROZENKASHMIR_DB_USER="postgres",
-FROZENKASHMIR_DB_PASSWORD="Lasiaf@123"
-FROZENKASHMIR_DB_HOST="localhost"
-FROZENKASHMIR_DB_PORT="5432"
+FROZENKASHMIR_DB_NAME=FROZENKASHMIR
+FROZENKASHMIR_DB_USER=postgres
+FROZENKASHMIR_DB_PASSWORD=Lasiaf@123
+FROZENKASHMIR_DB_HOST=localhost
+FROZENKASHMIR_DB_PORT=5432
